--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "DEBUG=app:* nodemon index",
-    "start": "NODE_ENV=production node index"
+    "start": "NODE_ENV=production node index",
+    "test": "mocha --exit"
   },
   "keywords": [],
   "author": "adrianarroyoc <adrianarroyoceja@gmail.com>",
@@ -27,8 +28,12 @@
     "express-debug": "^1.1.1",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.9",
+    "mocha": "^8.0.1",
     "nodemon": "^2.0.4",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "proxyquire": "^2.1.3",
+    "sinon": "^9.0.2",
+    "supertest": "^4.0.2"
   },
   "husky": {
     "hooks": {
