--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "DEBUG=app:* nodemon index",
     "start": "NODE_ENV=production node index",
-    "test": "mocha --exit"
+    "test": "mocha --exit",
+    "cover": "nyc npm run test",
+    "report": "nyc report --reporter=html"
   },
   "keywords": [],
   "author": "adrianarroyoc <adrianarroyoceja@gmail.com>",
@@ -30,6 +32,7 @@
     "lint-staged": "^10.2.9",
     "mocha": "^8.0.1",
     "nodemon": "^2.0.4",
+    "nyc": "^15.1.0",
     "prettier": "^2.0.5",
     "proxyquire": "^2.1.3",
     "sinon": "^9.0.2",
@@ -42,5 +45,14 @@
   },
   "lint-staged": {
     "*.js": "eslint --cache --fix"
+  },
+  "nyc": {
+    "all": true,
+    "includes": [
+      "routes",
+      "services",
+      "lib",
+      "utils"
+    ]
   }
 }
