--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@hapi/joi": "^17.1.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "decrypt": "0.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.5.8",
